    1     devs  WARN: ADC input not connected
    1   sensor  ADC value / light intensity conversion tables
    1   energy  Report energy counts in amp-hours
    2     core  Reverse mapping (instr -> addresses) to simplify monitors
    2    probe  Event profiler that collects min, max, mean statistics

----------------------------------- Completed -----------------------------------------
    1   probes  [Sascha Silbe] added support for multiple USART connx        1.7.77
    1   probes  Added VirgilMonitor for watching for Virgil-level exceptions 1.7.76
    1     devs  Added ATMega169 from Anttu Koski                             1.7.70
    2     devs  Added new versions of ATMega, ATMegaTimer                    1.7.66
    1     devs  Added first version of ATMegaTimer class                     1.7.65
    2    probe  Implemented CallTrace and CallStack utilities for probes     1.7.57
    2    probe  [John Regehr] added Break, Icall, Print, etc monitors        1.7.56
    1    input  ELF format loads symbols for use in monitors                 1.7.56
    1    probe  Implement stack change probe that uses probes, watches       1.7.38
  2-3    input  ELF format reader                                            1.7.xx
    1    probe  Added simplest interactive monitor                           1.5.118
    1      sim  Automatically patch node ID for TinyOS and SOS               1.5.116
    1      sim  [Bastian Schlich] ATMega16 device added                      1.5.109
  2-3      sim  Full support for ATMega32 device                             1.5.105
    1     devs  Added lightsensor, RandomSensorData                          1.5.103
    1     devs  First version of RegisterSet for bitfields                   1.5.102
    1    input  Fixed sections option to allow loading user sections         1.5.94
    2    probe  Implemented probing of interrupts                            1.5.94
    2    radio  Implemented probing interface for radio                      1.5.89