@@ -100,6 +100,7 @@
     2    probe  Event profiler that collects min, max, mean statistics
 
 ----------------------------------- Completed -----------------------------------------
+    1   probes  Added SPIForwarder and SPIMonitor                            1.7.78
     1   probes  [Sascha Silbe] added support for multiple USART connx        1.7.77
     1   probes  Added VirgilMonitor for watching for Virgil-level exceptions 1.7.76
     1     devs  Added ATMega169 from Anttu Koski                             1.7.70
